@@ -210,7 +210,6 @@ EXTRA_CFLAGS += -Wall -Wstrict-prototypes -Wno-trigraphs
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
 EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_RBUS_SUPPORT -DRTMP_RF_RW_SUPPORT
-EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DENHANCED_STAT_DISPLAY -DRSSI_FEEDBACK
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 
@@ -269,7 +268,6 @@ endif
 ifeq ($(CONFIG_RALINK_MT7620),y)
 EXTRA_CFLAGS += -DRT6352 -DRF_BANK
 EXTRA_CFLAGS += -DVCORECAL_SUPPORT
-EXTRA_CFLAGS += -DLOFT_IQ_CAL_SUPPORT
 EXTRA_CFLAGS += -DRTMP_TEMPERATURE_CALIBRATION
 EXTRA_CFLAGS += -DDYNAMIC_VGA_SUPPORT
 EXTRA_CFLAGS += -DMCS_LUT_SUPPORT -DPEER_DELBA_TX_ADAPT
